--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
         <div id="container-socials">
             <div id="social-links">
                 <a href="mailto:mariam.nze@gmail.com"><i class="fa fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/mariam-nzeyimana/"><i class="fa fa-linkedin-square"></i></a>
-                <a href="https://github.com/MariamNze"><i class="fa fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/mariam-nzeyimana/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://github.com/MariamNze" target="_blank"><i class="fa fa-github"></i></a>
             </div>
                 <p id="copyright">&copy; 2025 Mariam NZEYIMANA - Tous droits réservés.</p>
             </div>
